<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_readable"
        android:title="@string/readable_reader_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_readable_contents"
        android:title="@string/readable_reader_contents_short"
        android:contentDescription="@string/readable_reader_contents"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_annotate_selection"
        android:title="@string/readable_reader_annotate_selection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_readable_annotations"
        android:title="@string/readable_reader_annotations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reading_layout"
        android:title="@string/readable_reader_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_original_pdf"
        android:title="@string/readable_reader_open_original"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_readable_source"
        android:title="@string/readable_reader_open_source"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download_readable_html"
        android:title="@string/readable_reader_download_html"
        app:showAsAction="never" />
</menu>
