<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_pdf"
        android:icon="@drawable/ic_reader_search"
        android:title="@string/reader_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_toggle_bookmark"
        android:icon="@drawable/ic_reader_bookmark_add"
        android:title="@string/reader_add_bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_bookmarks"
        android:icon="@drawable/ic_reader_bookmarks"
        android:title="@string/reader_view_bookmarks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_external"
        android:icon="@drawable/ic_reader_open_external"
        android:title="@string/reader_open_external"
        app:showAsAction="ifRoom" />
</menu>
